--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "js-cookie": "^1.0.4",
+    "darkreader": "^4.9.80",
+    "jquery": "^3.7.1",
+    "js-cookie": "^1.5.1",
+    "js-cookies": "^1.0.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-hooks-global-state": "^2.1.0",
+    "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
