--- a/AnonyTube.conf
+++ b/AnonyTube.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-	    server_name anonytube.jimchen.me tubeapp.org;
+	    server_name anonytube.jimchen.me;
 
     # Redirect HTTP to HTTPS
     return 301 https://$host$request_uri;
@@ -8,7 +8,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name anonytube.jimchen.me tubeapp.org;
+    server_name anonytube.jimchen.me;
 
     # SSL Configuration
     ssl_certificate /etc/letsencrypt/live/anonytube.jimchen.me/fullchain.pem;
