--- a/AnonyTube.conf
+++ b/AnonyTube.conf
@@ -12,6 +12,7 @@ server {
 
     # SSL Configuration
     ssl_certificate /etc/letsencrypt/live/anonytube.jimchen.me/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/anonytube.jimchen.me/privkey.pem;
 
     location / {
         root /var/www/AnonyTube/frontend/build;
