--- a/AnonyTube.conf
+++ b/AnonyTube.conf
@@ -20,7 +20,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api/ {
+    location /anonytubeapi/ {
         rewrite ^/anonytubeapi/(.*) /$1 break;
         proxy_pass http://localhost:1242;
         proxy_set_header Upgrade $http_upgrade;
